change email template.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/order_update_guest.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/order_update_guest.html
@@ -16,7 +16,7 @@
 <table>
     <tr class="email-intro">
         <td>
-            <p class="greeting">{{trans "%name," name=$billing.getName()}}</p>
+            <p class="greeting">Hi {{trans "%name," name=$billing.getFirstname()}}</p>
             <p>
                 {{trans
                     "Your order #%increment_id has been updated with a status of <strong>%order_status</strong>."
