--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/invoice_new.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/invoice_new.html
@@ -23,7 +23,7 @@
 <table>
     <tr class="email-intro">
         <td>
-            <p class="greeting">{{trans "%name," name=$order.getCustomerName()}}</p>
+            <p class="greeting">Hi {{trans "%name," name=$order.getCustomerFirstname()}}</p>
             <p>
                 {{trans "Thank you for your order from %store_name." store_name=$store.getFrontendName()}}
                 {{trans 'You can check the status of your order by <a href="%account_url">logging into your account</a>.' account_url=$this.getUrl($store,'customer/account/',[_nosid:1]) |raw}}
