--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/invoice_update.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/invoice_update.html
@@ -18,7 +18,7 @@
 <table>
     <tr class="email-intro">
         <td>
-            <p class="greeting">{{trans "%name," name=$order.getCustomerName()}}</p>
+            <p class="greeting">Hi {{trans "%name," name=$order.getCustomerFirstname()}}</p>
             <p>
                 {{trans
                     "Your order #%increment_id has been updated with a status of <strong>%order_status</strong>."
