--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/order_new_guest.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/order_new_guest.html
@@ -22,7 +22,7 @@
 <table>
     <tr class="email-intro">
         <td>
-            <p class="greeting">{{trans "%name," name=$order.getBillingAddress().getName()}}</p>
+            <p class="greeting">Hi {{trans "%name," name=$order.getBillingAddress().getFirstname()}}</p>
             <p>
                 {{trans "Thank you for your order from %store_name." store_name=$store.getFrontendName()}}
                 {{trans "Once your package ships we will send you a tracking number."}}
