--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/shipment_new_guest.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/shipment_new_guest.html
@@ -23,7 +23,7 @@
 <table>
     <tr class="email-intro">
         <td>
-            <p class="greeting">{{trans "%name," name=$billing.getName()}}</p>
+            <p class="greeting">Hi {{trans "%name," name=$billing.getFirstname()}}</p>
             <p>
                 {{trans "Thank you for your order from %store_name." store_name=$store.getFrontendName()}}
             </p>
