--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/shipment_new.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/email/shipment_new.html
@@ -51,7 +51,7 @@
                 </tr>
             </table>
             {{/depend}}
-            {{block class='Magento\\Framework\\View\\Element\\Template' area='frontend' template='Magento_Sales::email/shipment/track.phtml' shipment=$shipment order=$order}}
+            {{layout handle="sales_email_order_shipment_track" shipment_id=$shipment_id order_id=$order_id}}
             <table class="order-details">
                 <tr>
                     <td class="address-details">
