放开发送email模板header显示。新增忽略文件夹。

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Email/email/header.html
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Email/email/header.html
@@ -34,7 +34,7 @@
         <td class="wrapper-inner" align="center">
             <table class="main" align="center">
                 <tr>
-                    <td class="header" style="display:none;">
+                    <td class="header">
                         <a class="logo" href="{{store url=""}}">
                             <img
                                 {{if logo_width}}
